# MXCompiler

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  a.txt
grammar/: MXLexer.g4  MXParser.g4  build.sh
include/: tools.h
include/IR/: IR.h  IRBuilder.h  IR_basic.h
include/ast/: ast.h  astnode.h  astnode_visitor.h  expr_astnode.h  scope.hpp  semantic_visitor.h  statement_astnode.h  structural_astnode.h
include/naivebackend/: build_layout.hpp  codegen.hpp  naivebackend.h
include/opt/: betterbr.h  cfg.h  confgraph.h  dce.h  gen.h  global_var_cache.h  liveanalysis.h  mem2reg.h  opt.h  phieliminate.h  regalloc.h
include/semantic/: semantic.h  visitor.h
src/: CMakeLists.txt  main.cpp
src/IR/: CMakeLists.txt  IRBuilder.cpp  build.sh  builtin.c  builtin.ll  builtin.s
src/ast/: CMakeLists.txt  astnode.cpp  expr_astnode.cpp  semanticvisitor.cpp  statement_astnode.cpp  structural_astnode.cpp
src/naivebackend/: CMakeLists.txt  naivebackend.cpp
src/opt/: CMakeLists.txt  betterbr.cpp  cfg.cpp  confgraph.cpp  dce.cpp  gen.cpp  global_var_cache.cpp  liveanalysis.cpp  mem2reg.cpp  optbackend.cpp  phieliminate.cpp  regalloc.cpp
src/semantic/: CMakeLists.txt  semantic.cpp  visitor.cpp
src/semantic/antlr-generated/: MXLexer.cpp  MXLexer.h  MXLexer.interp  MXLexer.tokens  MXParser.cpp  MXParser.h  MXParser.interp  MXParser.tokens  MXParserBaseVisitor.cpp  MXParserBaseVisitor.h  MXParserVisitor.cpp  MXParserVisitor.h
