include_directories(/usr/include/antlr4-runtime/)
include_directories(${CMAKE_SOURCE_DIR}/include/semantic)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/antlr-generated)
file(GLOB ANLTR_SOURCES "antlr-generated/*.cpp")
file(GLOB SEMANTIC_SOURCES "*.cpp")
add_library(mx-antlr STATIC ${ANLTR_SOURCES})
add_library(semantic STATIC ${SEMANTIC_SOURCES})
target_link_libraries(mx-antlr PUBLIC antlr4-runtime)
target_link_libraries(semantic PUBLIC antlr4-runtime mx-antlr)